changed a lot of the colors and fixed the collapsable small-screen hamburger

--- a/Sampleapp/src/app/app.component.css
+++ b/Sampleapp/src/app/app.component.css
@@ -1,4 +1,34 @@
-.dropdown-menu-right {
-  right: 0;
-  left: auto;
+/* change the background color */
+.navbar-custom {
+  background-color: #e4e4e4;
+}
+
+/* change the brand and text color */
+.navbar-custom .navbar-brand,
+.navbar-custom .navbar-text {
+  color: #1d1d1d;
+}
+
+/* change the link color */
+.navbar-custom .navbar-nav .nav-link {
+  color: #1d1d1d;
+}
+
+.navbar ul li a:hover {
+  color: #7fa53e;
+}
+
+.dropdown-item.active {
+  color: #7fa53e;
+}
+
+/* change the color of active or hovered links */
+/* .navbar-custom .nav-item.active .nav-link,
+.navbar-custom .nav-item:focus .nav-link,
+.navbar-custom .nav-item:hover .nav-link {
+  color: rgb(30, 148, 59);
+} */
+
+.custom-toggler .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(127, 165, 62, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
